--- a/react/frontend/src/App.less
+++ b/react/frontend/src/App.less
@@ -1,9 +1,20 @@
 @import '~antd/dist/antd.less';
 
-.tv-ballotRate {
+.tv-contestantDetails {
+  &__content {
+    h5 {
+      margin-bottom: 0.25em;
+    }
+  }
+
+  &__flag {
+    margin-right: 24px;
+  }
+}
+
+.tv-ratingForm {
   .ant-rate {
     display: flex;
-    margin-bottom: 32px;
   }
 
   .ant-rate-star {
@@ -20,66 +31,10 @@
       margin-right: 16px;
     }
   }
-
-  &--title {
-    text-transform: capitalize;
-  }
 }
 
-.tv-contestantDetails {
-  &--content {
-    h5.ant-typography {
-      margin-bottom: 0.25em;
-    }
-  }
-
-  &--flag {
-    margin-right: 24px;
-  }
-}
-
-.tv-scorecardRate {
-  &--title {
+.tv-ratingSummary {
+  &__title {
     display: block;
-    text-transform: capitalize;
-  }
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
