Updated some packages, back in fully working state.

--- a/pug/views/client.pug
+++ b/pug/views/client.pug
@@ -13,8 +13,7 @@ block content
                 label(class='d-inline mb-0 text-center', for='name')
                   h6 Enter your name to join or reconnect
                 input(class='form-control', id='name', maxlength='12', required, type='text')
-            div(class='d-grid')
-              button(class='btn btn-lg btn-primary', disabled, type='submit') Join
+            button(class='btn btn-lg btn-block btn-primary', disabled, type='submit') Join
 
     //scorecard
     div(id='ui-scorecard')
