--- a/react/frontend/src/App.less
+++ b/react/frontend/src/App.less
@@ -4,7 +4,7 @@
 
 body {
   font-family: 'Rubik', sans-serif;
-  max-width: 786px;
+  max-width: 640px;
   min-width: 320px;
 
   @media ( min-width: 768px ) {
@@ -39,6 +39,26 @@ body {
   }
 }
 
+.tv-GNBB {
+  margin-top: 0;
+  text-align: center;
+
+  button {
+    border: 0;
+    background: none;
+    padding: 0;
+
+    img {
+      filter: drop-shadow( 0 0 1px rgba( 18, 3, 56, 0.75 ) );
+      width: 80px;
+    }
+
+    &:active {
+      transform: scale( 0.8 );
+    }
+  }
+}
+
 .tv-ratingForm {
   .ant-rate {
     display: flex;
@@ -66,7 +86,7 @@ body {
 }
 
 .tv-uiPreview {
-  background: linear-gradient( to top right, #9254de, #f759ab ) fixed no-repeat;
+  background: linear-gradient( to top right, #f759ab, #9254de ) fixed no-repeat;
   padding: 1rem;
 
   @media ( min-width: 768px ) {
