Container style adjustments.

--- a/react/frontend/src/App.less
+++ b/react/frontend/src/App.less
@@ -163,17 +163,17 @@ body {
   margin: auto;
   padding: 16px;
 
+  & > & {
+    padding-top: 0;
+  }
+
   &--desktop {
-    min-width: 1024px;
+    min-width: 768px;
   }
 
   &--mobile {
     max-width: 414px;
     min-width: 320px;
-  }
-
-  &--nopad {
-    padding: 0;
   }
 
   &--television {
