--- a/react/frontend/src/App.less
+++ b/react/frontend/src/App.less
@@ -406,7 +406,7 @@ body {
 
 .tv-txt {
   &--hidden {
-    filter: blur(0.375em) grayscale(1);
+    filter: blur(0.375rem) grayscale(1);
     transition: filter 0.25s linear;
   }
 }
