Minor style adjustments.

--- a/react/frontend/src/index.less
+++ b/react/frontend/src/index.less
@@ -45,7 +45,8 @@ body {
 }
 
 .tv-ballot {
-  .tv-contestantHeading {
+  .tv-contestantHeading,
+  .tv-scoreSummary {
     margin-bottom: 16px;
   }
 }
